--- a/src/main.scss
+++ b/src/main.scss
@@ -3,4 +3,5 @@
 @import 'scss/component';
 @import 'scss/reset';
 @import 'scss/font-awesome-5.11.2/index';
-@import '../node_modules/@fancyapps/fancybox/src/scss/index';
+//@import '../node_modules/@fancyapps/fancybox/src/scss/index';
+//@import '../node_modules/slick-carousel/slick/slick-theme';
