--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -101,9 +101,9 @@ $color-danger    : #dc3545 !default;
 
 
 
-//************
+//*************
 // Icon 引用 **
-//************
+//*************
 
 $fa-font-path: "./font-awesome-5.11.2/webfonts";
 @import "./font-awesome-5.11.2/scss/variables";
