--- a/src/main.scss
+++ b/src/main.scss
@@ -3,5 +3,6 @@
 @import 'scss/component';
 @import 'scss/reset';
 @import 'scss/font-awesome-5.11.2/index';
+@import 'scss/page/header';
 //@import '../node_modules/@fancyapps/fancybox/src/scss/index';
 //@import '../node_modules/slick-carousel/slick/slick-theme';
