--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -71,12 +71,17 @@
 }
 
 @mixin container {
+    width: 100%;
+    padding-right: ($grid-gutters/2);
+    padding-left: ($grid-gutters/2);
+    margin-right: auto;
+    margin-left: auto;
+    
     @each $media,$width in $container-width {
-        max-width: $width - ($grid-gutters*2);
-        width: 100%;
-        padding-right: $width;
-        padding-left: $width;
-        margin-right: auto;
-        margin-left: auto;
+        @include media-min($width) {
+            max-width: $width - ($grid-gutters*2);
+            @content;
+        }
     }
+    
 }
