--- a/src/main.scss
+++ b/src/main.scss
@@ -6,3 +6,4 @@
 @import 'scss/page/header';
 //@import '../node_modules/@fancyapps/fancybox/src/scss/index';
 //@import '../node_modules/slick-carousel/slick/slick-theme';
+@import 'scss/browserReplacement';
