--- a/src/main.scss
+++ b/src/main.scss
@@ -4,6 +4,8 @@
 @import 'scss/reset';
 @import 'scss/font-awesome-5.11.2/index';
 @import 'scss/page/header';
+@import 'scss/page/footer';
+@import 'scss/page/home';
 //@import '../node_modules/@fancyapps/fancybox/src/scss/index';
 //@import '../node_modules/slick-carousel/slick/slick-theme';
 @import 'scss/browserReplacement';
