--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -164,6 +164,23 @@ i {
     @include fas-icon;
 }
 
+button{
+    cursor: pointer;
+    &:focus{
+        outline: 0;
+    }
+    &:active{
+        box-shadow: 0 0 0.5rem 0.375rem rgba(0, 0, 0, 0.25) inset;
+    }
+}
+a[type="button"]{
+    display: inline-block;
+    text-align: center;
+    &:active{
+        box-shadow: 0 0 0.5rem 0.375rem rgba(0, 0, 0, 0.25) inset;
+    }
+}
+
 @each $name,
 $size in $headingFontSize {
 
