--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -51,7 +51,8 @@ $container-width:(
     "sm": 576px,
     "md": 768px,
     "lg": 992px,
-    "xl": 1200px
+    "xl": 1200px,
+    "xxl":1460px
 )!default;
     
 //*********************
