page knowledge 建立

--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,7 @@
 @import 'scss/page/header';
 @import 'scss/page/footer';
 @import 'scss/page/home';
+@import 'scss/page/knowledge';
 //@import '../node_modules/@fancyapps/fancybox/src/scss/index';
 //@import '../node_modules/slick-carousel/slick/slick-theme';
 @import 'scss/browserReplacement';
