--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -187,7 +187,7 @@ $size in $headingFontSize {
     #{$name}{
         --font-size: #{$size};
         --line-height: #{$size * 2};
-        line-height: #{$size * 2};
+        line-height: 1.5;
         font-size: $size;
     }
 }
