--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -15,10 +15,12 @@ header
 
 header{
     background-color: black;
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1010;
+
 }
 .header {
     &#{-container} {
