--- a/src/scss/page/_knowledge.scss
+++ b/src/scss/page/_knowledge.scss
@@ -13,7 +13,7 @@
                 padding-left: 6.5rem;
 
                 h2{
-                    font-size: 3.5rem;
+                    font-size: 5rem;
                     font-weight: bolder;
                     color: white;
                     margin-bottom: 0.75rem;
@@ -23,44 +23,104 @@
         }
     }
     &#{-sec2}{
+        @include py(3.5rem);
         &#{-container}{
+            @include container;
             h2{
                 text-align: center;
+                font-size: 1.5rem;
+                font-weight: 700;
+                margin-bottom: 0;
             }
             h3{
                 text-align: center;
+                font-size: 0.875rem;
+                font-weight: 700;
             }
 
-            &#{-video}{
-            }
+            //&#{-video}{}
         }
         &#{_video}{
             &#{-formGroup}{
                 form{
+                    border: 0.125rem solid #a0a1a5;
+                    position: relative;
+                    width: 200px;
+                    @include my(1.5rem);
+
                     input{
-                        &[type="text"]{
-    
-                        }
-                        &[type="submit"]{
-    
-                        }
+                        height: 1.5rem;
+                        outline: 0;
+                        width: 100%;
+                    }
+                    button {
+                        position: absolute;
+                        background-color: #a0a1a5;
+                        background-image: url(../../images/icon/search.svg);
+                        background-size: 60%;
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        border: 0;
+                        width: 2.0625rem;
+                        height: 2.0625rem;
+                        right: -6px;
+                        bottom: -1px;
+                        top: -2px;
                     }
                 }
             }
             &#{-row}{
-                img{}
-                h4{}
-                p{}
+                @include row;
+                @include mx(-0.25rem);
+                img{
+                    width: 100%;
+                }
+                h4{
+                    font-weight: 900;
+                    @include text-ellipsis;
+                    @include my(0.5rem);
+                    @include px(1.5rem);
+                }
+                p{
+                    font-size: 0.875rem;
+                    line-height: 1.25rem;
+                    height: 5rem;
+                    overflow: hidden;
+                    margin-bottom: 0.75rem;
+                    @include px(1.5rem);
+                }
 
                 &#{-col-1}{
-                    img{}
-                    h4{}
-                    p{}
+                    @include stretched-link;
+                    @include col(25%);
+                    @include px(0.25rem);
+                    height: 480px;
+                    figure{
+                        box-shadow: 0 0.125rem 0.25rem 0.125rem rgba(0,0,0,0.15);
+                        overflow: hidden;
+                        > div{
+                        width: 100%;
+                        height: 330px;
+                        background-size: cover;
+                        margin-bottom: 0.25rem;
+                        }
+                    }
                 }
                 &#{-col-2}{
-                    img{}
-                    h4{}
-                    p{}
+                    @include stretched-link;
+                    @include col(50%);
+                    @include px(0.25rem);
+                    height: 480px;
+                    figure{
+                        box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0,0,0,0.15);
+                        overflow: hidden;
+                        > div{
+                        width: 100%;
+                        height: 330px;
+                        background-size: cover;
+                        margin-bottom: 0.25rem;
+                        }
+                    }
                 }
             }
         }
