新增 applications 修改 knowledge render 邏輯

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@
 @import 'scss/page/footer';
 @import 'scss/page/home';
 @import 'scss/page/knowledge';
+@import 'scss/page/applications';
 //@import '../node_modules/@fancyapps/fancybox/src/scss/index';
 //@import '../node_modules/slick-carousel/slick/slick-theme';
 @import 'scss/browserReplacement';
