--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -242,6 +242,7 @@ header{
         &#{-li} {
             
             &#{-link} {
+                white-space: nowrap;
                 display: block;
                 padding: 0.35rem 1.5rem;
                 @include media-max($xl) {
