--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -12,7 +12,7 @@
                 padding-left: 6.5rem;
 
                 h2{
-                    font-size: 6rem;
+                    @include display-1;
                     font-weight: bolder;
                     color: white;
                     margin-left: -0.5rem;
@@ -53,7 +53,7 @@
             &#{-display}{
                 padding-left: 6.5rem;
                 h2{
-                    font-size: 3.75rem;
+                    @include display-3;
                     font-weight: bolder;
                     color: #b68b69;
                     margin-left: -0.5rem;
@@ -83,14 +83,14 @@
     &#{-sec3}{
         background-size: 100% auto;
         background-position: center;
-        height: 80vh;
         @include py(3.5rem);
         &#{-container}{
             @include container;
+            @include px(5rem);
             text-align: center;
             h2{
                 color: white;
-                font-size: 3.5rem;
+                @include display-3;
                 font-weight: bolder;
                 margin-bottom: 1rem;
                 padding-top: 1.125rem;
@@ -164,7 +164,7 @@
             @include container;
             h2{
                 color: white;
-                font-size: 3.5rem;
+                @include display-3;
                 font-weight: bolder;
                 margin-bottom: 0.5rem;
             }
@@ -208,7 +208,7 @@
                 padding-left: 6.5rem;
 
                 h2{
-                    font-size: 3.5rem;
+                    @include display-3;
                     font-weight: bolder;
                     color: white;
                     margin-bottom: 0.75rem;
@@ -239,7 +239,6 @@
 #silck-applications{
     figure{
         width: 100%;
-        padding: 5px;
         text-align: center;
         img{
             width: 100%;
