--- a/src/scss/page/_knowledge.scss
+++ b/src/scss/page/_knowledge.scss
@@ -12,7 +12,7 @@
             &#{-display}{
 
                 h2{
-                    font-size: 5rem;
+                    @include display-2;
                     font-weight: bolder;
                     color: white;
                     margin-bottom: 0.75rem;
@@ -96,7 +96,7 @@
                     figure{
                         box-shadow: 0 0.125rem 0.25rem 0.125rem rgba(0,0,0,0.15);
                         overflow: hidden;
-                        > div{
+                        img{
                         width: 100%;
                         height: 330px;
                         background-size: cover;
@@ -112,7 +112,7 @@
                     figure{
                         box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0,0,0,0.15);
                         overflow: hidden;
-                        > div{
+                        img{
                         width: 100%;
                         height: 330px;
                         background-size: cover;
