--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -118,6 +118,15 @@ $FontSize-display-4:(
     "xxl": 2.5rem,
 )!default;
 
+$FontSize-display-5:(
+    "xxs": 1rem,
+    "xs":  1.125rem,
+    "sm":  1.25rem,
+    "md":  1.375rem,
+    "lg":  1.5rem,
+    "xl":  1.75rem,
+    "xxl": 2rem,
+)!default;
 
 //*************
 // Color 引用 **
