--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9067,7 +9067,7 @@ header {
   top: 1rem;
   right: 1rem;
   margin-left: auto;
-  border: 0.0625rem white solid;
+  border: 0.0625rem #fcfdfd solid;
   background-color: transparent;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -9090,8 +9090,8 @@ header {
 
 .header_navbar-btn-icon {
   position: relative;
-  border-top: solid white 0.125rem;
-  border-bottom: solid white 0.125rem;
+  border-top: solid #fcfdfd 0.125rem;
+  border-bottom: solid #fcfdfd 0.125rem;
   width: 1.5rem;
   height: 1.25rem;
   pointer-events: none;
@@ -9107,7 +9107,7 @@ header {
   left: 50%;
   top: 50%;
   width: 24px;
-  background-color: white;
+  background-color: #fcfdfd;
   height: 0.0625rem;
   -webkit-transform: rotate(0deg) translate(-50%, 0);
           transform: rotate(0deg) translate(-50%, 0);
@@ -9121,7 +9121,7 @@ header {
   right: 50%;
   bottom: 50%;
   width: 24px;
-  background-color: white;
+  background-color: #fcfdfd;
   height: 0.0625rem;
   -webkit-transform: rotate(0deg) translate(50%, 0);
           transform: rotate(0deg) translate(50%, 0);
@@ -9155,7 +9155,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: black;
+  background-color: rgba(3, 3, 3, 0.9);
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
@@ -9208,9 +9208,10 @@ header {
   padding-bottom: 1.5rem;
   display: block;
   height: 100%;
-  color: white;
+  color: #fdfafa;
   position: relative;
   font-weight: bolder;
+  font-size: 1rem;
 }
 
 @media (max-width: 1200px) {
@@ -9221,24 +9222,24 @@ header {
 }
 
 .header_navbar-ul-li-link:link {
-  color: white;
+  color: #fdfafa;
 }
 
 .header_navbar-ul-li-link:visited {
-  color: white;
+  color: #fdfafa;
 }
 
 .header_navbar-ul-li-link:active {
-  color: white;
+  color: #fdfafa;
 }
 
 .header_navbar-ul-li-link:hover {
-  color: white;
+  color: #fdfafa;
 }
 
 @media (max-width: 1200px) {
   .header_navbar-ul-li-link:hover {
-    color: #b78a69;
+    color: #b68b69;
   }
 }
 
@@ -9315,6 +9316,7 @@ header {
   padding: 0.35rem 1.5rem;
   color: white;
   font-weight: bolder;
+  font-size: 0.875rem;
 }
 
 @media (max-width: 1200px) {
@@ -9401,6 +9403,8 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media (min-width: 768px) {
@@ -9503,9 +9507,42 @@ footer {
 }
 
 .home-sec1 {
+  padding-top: 7.5rem;
+  height: 1200px;
+  position: relative;
+  background-color: #000;
+}
+
+@media (max-width: 576px) {
+  .home-sec1 {
+    height: 800px;
+  }
+}
+
+.home-sec1-bgUpper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-position: 47% center;
   background-size: cover;
-  height: 100vh;
-  background-position: center;
+  z-index: 4;
+  -webkit-animation: star-sky-1 5s linear infinite;
+          animation: star-sky-1 5s linear infinite;
+}
+
+.home-sec1-bgLower {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-position: 47% center;
+  background-size: cover;
+  z-index: 4;
+  -webkit-animation: star-sky-2 5s linear infinite;
+          animation: star-sky-2 5s linear infinite;
 }
 
 .home-sec1-container {
@@ -9514,6 +9551,9 @@ footer {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  position: relative;
+  top: -8rem;
+  z-index: 5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -9553,13 +9593,27 @@ footer {
   }
 }
 
+@media (max-width: 576px) {
+  .home-sec1-container {
+    top: -6rem;
+  }
+}
+
 .home-sec1-container-display {
-  padding-left: 6.5rem;
+  max-width: 1140px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+@media (max-width: 992px) {
+  .home-sec1-container-display {
+    text-align: center;
+  }
 }
 
 .home-sec1-container-display h2 {
   font-weight: bolder;
-  color: white;
+  color: #fdfcfc;
   margin-left: -0.5rem;
   margin-bottom: 1rem;
   text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
@@ -9608,16 +9662,57 @@ footer {
 }
 
 .home-sec1-container-display h3 {
-  font-size: 2.25rem;
   font-weight: bolder;
-  color: white;
+  color: #fdfcfc;
   margin-top: 0.5rem;
   margin-bottom: 1rem;
   text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
 }
 
+@media (min-width: 350px) {
+  .home-sec1-container-display h3 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .home-sec1-container-display h3 {
+    font-size: 1.75rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .home-sec1-container-display h3 {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .home-sec1-container-display h3 {
+    font-size: 2.25rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .home-sec1-container-display h3 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-sec1-container-display h3 {
+    font-size: 3rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .home-sec1-container-display h3 {
+    font-size: 3.5rem;
+  }
+}
+
 .home-sec1-container-display button {
-  background-color: white;
+  background-color: #fdfcfc;
   font-size: 1.125rem;
   font-weight: bolder;
   padding: 0.625rem 1.5rem;
@@ -9631,6 +9726,30 @@ footer {
   background-size: cover;
   background-position: center;
   height: 100vh;
+  position: relative;
+}
+
+@media (max-width: 576px) {
+  .home-sec2 {
+    height: 85vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media (max-width: 576px) {
+  .home-sec2-bg {
+    background-size: cover;
+    background-position: 85% center;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
 }
 
 .home-sec2-container {
@@ -9639,13 +9758,6 @@ footer {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100%;
 }
 
 @media (min-width: 576px) {
@@ -9678,14 +9790,41 @@ footer {
   }
 }
 
+@media (min-width: 576px) {
+  .home-sec2-container {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+}
+
+@media (max-width: 576px) {
+  .home-sec2-container {
+    background-color: #000;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+}
+
 .home-sec2-container-display {
-  padding-left: 6.5rem;
+  max-width: 1140px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+@media (max-width: 992px) {
+  .home-sec2-container-display {
+    text-align: center;
+  }
 }
 
 .home-sec2-container-display h2 {
   font-weight: bolder;
   color: #b68b69;
   margin-left: -0.5rem;
+  padding-top: 0.5rem;
   margin-bottom: 1rem;
 }
 
@@ -9731,29 +9870,93 @@ footer {
   }
 }
 
+@media (max-width: 768px) {
+  .home-sec2-container-display h2 {
+    margin-bottom: 0.5rem;
+  }
+}
+
 .home-sec2-container-display h3 {
-  font-size: 2rem;
   font-weight: bolder;
   color: #b68b69;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
   line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 350px) {
+  .home-sec2-container-display h3 {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .home-sec2-container-display h3 {
+    font-size: 1.125rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .home-sec2-container-display h3 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .home-sec2-container-display h3 {
+    font-size: 1.375rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .home-sec2-container-display h3 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-sec2-container-display h3 {
+    font-size: 1.75rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .home-sec2-container-display h3 {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .home-sec2-container-display h3 {
+    margin-bottom: 0.5rem;
+  }
 }
 
 .home-sec2-container-display button {
   background-color: #b68b69;
+  border: #b68b69 solid 1px;
+  border-radius: 0.125rem;
   font-size: 1.125rem;
   font-weight: bolder;
   padding: 0.625rem 2.75rem;
   margin-top: 0.5rem;
-  margin-bottom: 2.5rem;
-  border: 0;
-  border-radius: 0.125rem;
+  margin-bottom: 1.5rem;
+}
+
+@media (max-width: 768px) {
+  .home-sec2-container-display button {
+    margin-bottom: 0.5rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .home-sec2-container-display button {
+    background-color: transparent;
+    color: #b68b69;
+  }
 }
 
 .home-sec3 {
-  background-size: 100% auto;
-  background-position: center;
+  background-color: #333a44;
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
 }
@@ -9764,8 +9967,6 @@ footer {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  padding-left: 5rem;
-  padding-right: 5rem;
   text-align: center;
 }
 
@@ -9799,8 +10000,15 @@ footer {
   }
 }
 
+@media (min-width: 992px) {
+  .home-sec3-container {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
 .home-sec3-container h2 {
-  color: white;
+  color: #fdfcfc;
   font-weight: bolder;
   margin-bottom: 1rem;
   padding-top: 1.125rem;
@@ -9849,18 +10057,24 @@ footer {
 }
 
 .home-sec3-container button {
-  background-color: white;
+  background-color: #fdfcfc;
+  color: #333a44;
   font-size: 1.125rem;
   font-weight: bolder;
   padding: 0.625rem 2.5rem;
-  margin-top: 0.25rem;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
   border: 0;
   border-radius: 0.125rem;
 }
 
+.home-sec3-container h3 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .home-sec3-container h3 a {
-  color: white;
+  color: #fdfcfc;
   font-size: 1.5rem;
   font-weight: bolder;
 }
@@ -9916,42 +10130,153 @@ footer {
   }
 }
 
+@media (max-width: 992px) {
+  .home-sec4-container {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
 .home-sec4-container-display {
-  padding-left: 6.5rem;
-  margin-top: -23rem;
+  max-width: 1140px;
+  margin: 0 auto;
+  width: 100%;
+  margin-top: 5rem;
+}
+
+@media (min-width: 992px) {
+  .home-sec4-container-display {
+    margin-top: -23rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .home-sec4-container-display {
+    text-align: center;
+  }
 }
 
 .home-sec4-container-display h2 {
-  font-size: 3.75rem;
   font-weight: bolder;
-  color: white;
+  color: #fdfcfc;
   margin-left: -0.5rem;
   margin-bottom: 1rem;
 }
 
+@media (min-width: 350px) {
+  .home-sec4-container-display h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .home-sec4-container-display h2 {
+    font-size: 1.75rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .home-sec4-container-display h2 {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .home-sec4-container-display h2 {
+    font-size: 2.25rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .home-sec4-container-display h2 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-sec4-container-display h2 {
+    font-size: 3rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .home-sec4-container-display h2 {
+    font-size: 3.5rem;
+  }
+}
+
 .home-sec4-container-display h3 {
-  font-size: 2rem;
   font-weight: bolder;
-  color: white;
+  color: #fdfcfc;
   margin-top: 0.5rem;
   margin-bottom: 1rem;
   line-height: 1.2;
 }
 
+@media (min-width: 350px) {
+  .home-sec4-container-display h3 {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .home-sec4-container-display h3 {
+    font-size: 1.125rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .home-sec4-container-display h3 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .home-sec4-container-display h3 {
+    font-size: 1.375rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .home-sec4-container-display h3 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-sec4-container-display h3 {
+    font-size: 1.75rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .home-sec4-container-display h3 {
+    font-size: 2rem;
+  }
+}
+
 .home-sec4-container-display button {
-  background-color: white;
+  background-color: #fdfcfc;
+  color: #101010;
+  border: #fdfcfc solid 1px;
   font-size: 1.125rem;
   font-weight: bolder;
   padding: 0.625rem 2.75rem;
   margin-top: 0.5rem;
   margin-bottom: 2.5rem;
-  border: 0;
   border-radius: 0.125rem;
 }
 
+@media (max-width: 992px) {
+  .home-sec4-container-display button {
+    background-color: transparent;
+    color: #fdfcfc;
+  }
+}
+
 .home-sec5 {
-  background-size: 100% auto;
-  background-position: center;
+  background-color: #707882;
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
@@ -9996,7 +10321,7 @@ footer {
 }
 
 .home-sec5-container h2 {
-  color: white;
+  color: #fdfcfc;
   font-weight: bolder;
   margin-bottom: 0.5rem;
 }
@@ -10043,15 +10368,62 @@ footer {
   }
 }
 
+@media (max-width: 768px) {
+  .home-sec5-container h2 {
+    margin-bottom: 0.25rem;
+  }
+}
+
 .home-sec5-container h3 {
-  color: white;
-  font-size: 2rem;
-  font-weight: bolder;
+  color: #fdfcfc;
   margin-bottom: 0.5rem;
 }
 
+@media (min-width: 350px) {
+  .home-sec5-container h3 {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .home-sec5-container h3 {
+    font-size: 1.125rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .home-sec5-container h3 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .home-sec5-container h3 {
+    font-size: 1.375rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .home-sec5-container h3 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-sec5-container h3 {
+    font-size: 1.75rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .home-sec5-container h3 {
+    font-size: 2rem;
+  }
+}
+
 .home-sec5-container button {
-  background-color: white;
+  background-color: #fdfcfc;
+  color: #707882;
   font-size: 1.125rem;
   font-weight: bolder;
   padding: 0.625rem 2.5rem;
@@ -10074,14 +10446,31 @@ footer {
 .home-sec5-container-row-col {
   padding-left: 15px;
   padding-right: 15px;
-  -ms-flex-preferred-size: 33.333%;
-      flex-basis: 33.333%;
-  max-width: 33.333%;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  max-width: 100%;
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
+@media (min-width: 992px) {
+  .home-sec5-container-row-col {
+    padding-left: 15px;
+    padding-right: 15px;
+    -ms-flex-preferred-size: 33.333%;
+        flex-basis: 33.333%;
+    max-width: 33.333%;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
 }
 
 .home-sec5-container-row-col img {
@@ -10145,7 +10534,7 @@ footer {
 
 .home-sec6-container-display h2 {
   font-weight: bolder;
-  color: white;
+  color: #fdfcfc;
   margin-bottom: 0.75rem;
   text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
 }
@@ -10195,14 +10584,15 @@ footer {
 .home-sec6-container-display h3 {
   font-size: 2rem;
   font-weight: bolder;
-  color: white;
+  color: #fdfcfc;
   margin-top: 0.5rem;
   margin-bottom: 0.75rem;
   text-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.8);
 }
 
 .home-sec6-container-display button {
-  background-color: white;
+  background-color: #fdfcfc;
+  color: #707882;
   font-size: 1.125rem;
   font-weight: bolder;
   padding: 0.625rem 1.5rem;
@@ -10214,6 +10604,8 @@ footer {
 #silck-applications figure {
   width: 100%;
   text-align: center;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 #silck-applications figure img {
@@ -10224,14 +10616,16 @@ footer {
   left: -15px;
 }
 
+#silck-applications .slick-prev::before {
+  content: '';
+}
+
 #silck-applications .slick-prev img {
   -webkit-transform: translate(-100%, -50%);
           transform: translate(-100%, -50%);
   cursor: pointer;
-}
-
-#silck-applications .slick-prev::before {
-  content: '';
+  width: 4rem;
+  height: 5.5rem;
 }
 
 #silck-applications .slick-next {
@@ -10246,6 +10640,8 @@ footer {
   -webkit-transform: translate(100%, -50%);
           transform: translate(100%, -50%);
   cursor: pointer;
+  width: 4rem;
+  height: 5.5rem;
 }
 
 #silck-applications .slick-arrow {
@@ -10260,6 +10656,60 @@ footer {
 #silck-applications .slick-arrow:active {
   -webkit-box-shadow: none;
           box-shadow: none;
+}
+
+@media (max-width: 992px) {
+  #silck-applications .slick-arrow {
+    display: none !important;
+  }
+}
+
+@-webkit-keyframes star-sky-1 {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes star-sky-1 {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes star-sky-2 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes star-sky-2 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .knowledge-sec1 {
