--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -54,7 +54,7 @@ header{
             top: 1rem;
             right: 1rem;
             margin-left: auto;
-            border: 0.0625rem white solid;
+            border: 0.0625rem #fcfdfd solid;
             background-color: transparent;
             display: flex;
             align-items: center;
@@ -67,8 +67,8 @@ header{
             }
             &#{-icon}{
                 position: relative;
-                border-top:solid white 0.125rem;
-                border-bottom:solid white 0.125rem;
+                border-top:solid #fcfdfd 0.125rem;
+                border-bottom:solid #fcfdfd 0.125rem;
                 width: 1.5rem;
                 height: 1.25rem;
                 pointer-events: none;
@@ -80,7 +80,7 @@ header{
                     left: 50%;
                     top: 50%;
                     width: 24px;
-                    background-color: white;
+                    background-color: #fcfdfd;
                     height: 0.0625rem;
                     transform: rotate(0deg) translate(-50%,0);
                 }
@@ -91,7 +91,7 @@ header{
                     right: 50%;
                     bottom: 50%;
                     width: 24px;
-                    background-color: white;
+                    background-color: #fcfdfd;
                     height: 0.0625rem;
                     transform: rotate(0deg) translate(50%,0);
                 }
@@ -119,7 +119,7 @@ header{
         &#{-ul} {
             display: flex;
             align-items: center;
-            background-color: black;
+            background-color: rgba(3,3,3,0.9);
             transition: all 0.4s;
             
             @include media-min($xl) {
@@ -154,24 +154,25 @@ header{
                     }
                     display: block;
                     height: 100%;
-                    color: white;
+                    color: #fdfafa;
                     position: relative;
                     font-weight: bolder;
+                    font-size: 1rem;
                     &:link {
-                        color: white;
+                        color: #fdfafa;
                     }
 
                     &:visited {
-                        color: white;
+                        color: #fdfafa;
                     }
 
                     &:active {
-                        color: white;
+                        color: #fdfafa;
                     }
                     &:hover {
-                        color: white;
+                        color: #fdfafa;
                         @include media-max($xl) {
-                            color: #b78a69;
+                            color: #b68b69;
                         }
                     }
                     &::before {
@@ -250,6 +251,7 @@ header{
                 }
                 color: white;
                 font-weight: bolder;
+                font-size: 0.875rem;
                 &:link {
                     color: white;
                 }
